correcting contrast issues

--- a/style.css
+++ b/style.css
@@ -340,7 +340,7 @@ a:hover {
 
 .nav > li a:hover {
     background: transparent;
-    color: #F3976C !important;
+    color: #CD805B !important;
     text-decoration: underline;
 }
 
@@ -356,7 +356,7 @@ a:hover {
 
 .current_page{
     font-weight: 700;
-    color: #F3976C !important;
+    color: #CD805B !important;
 }
 
 
@@ -498,7 +498,6 @@ button {
 .btn-clean {
     border: 1px solid rgba(0, 0, 0, .08);
     border-bottom-color: rgba(0, 0, 0, .1);
-    text-shadow: 0 1px 0 rgba(0, 0, 1, .1);
     box-shadow: 0 1px 3px rgba(0, 0, 1, .25), inset 0 1px 0 0 rgba(255, 255, 255, .15);
 }
 
@@ -736,8 +735,16 @@ p {
 }
 
 .social {
-    max-width: 400px;
-    margin: auto auto auto auto;
+    max-width: 300px;
+    margin: 20px auto auto auto;
+}
+
+footer{
+    padding: 40px 0px !important;
+}
+
+footer .fa:hover{
+    color: #FFFFFF !important;
 }
 
 h2 {
@@ -779,6 +786,10 @@ h4 {
     color: #FFFFFF!important;
 }
 
+.footer_color{
+    color:#434342 !important;
+}
+
 .portfolio-thumb {
     margin-bottom: 24px;
 }
@@ -815,16 +826,16 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
-}
-
-.btn-atomic-tangerine {
-    background: #F3976C;
     color: #FFFFFF!important;
 }
 
+.btn-atomic-tangerine {
+    background: #E79D76;
+    color: #434342!important;
+}
+
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
+    background: #E79D76!important;
     color: #FFFFFF!important;
 }
 
